// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiSelect is rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  inputid="id"
  isloading="false"
>
  <wui-validatable-control>
    <select
      aria-label="aria-label"
      class="wuiSelect testClass1 testClass2"
      data-test-subj="test subject string"
      id="id"
      name="name"
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiSelect props disabled options are rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  isloading="false"
>
  <wui-validatable-control>
    <select
      class="wuiSelect"
    >
      <option
        value="1"
      >
        Option #1
      </option>
      <option
        disabled=""
        value="2"
      >
        Option #2
      </option>
    </select>
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiSelect props fullWidth is rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="true"
  icon="[object Object]"
  isloading="false"
>
  <wui-validatable-control>
    <select
      class="wuiSelect wuiSelect--fullWidth"
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiSelect props isInvalid is rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  isloading="false"
>
  <wui-validatable-control
    isinvalid="true"
  >
    <select
      class="wuiSelect"
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiSelect props isLoading is rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  isloading="true"
>
  <wui-validatable-control>
    <select
      class="wuiSelect wuiSelect-isLoading"
    />
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiSelect props options are rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  isloading="false"
>
  <wui-validatable-control>
    <select
      class="wuiSelect"
    >
      <option
        value="1"
      >
        Option #1
      </option>
      <option
        value="2"
      >
        Option #2
      </option>
    </select>
  </wui-validatable-control>
</wui-form-control-layout>
`;

exports[`WuiSelect props value option is rendered 1`] = `
<wui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  isloading="false"
>
  <wui-validatable-control>
    <select
      class="wuiSelect"
    >
      <option
        selected=""
        value="1"
      >
        Option #1
      </option>
      <option
        value="2"
      >
        Option #2
      </option>
    </select>
  </wui-validatable-control>
</wui-form-control-layout>
`;
